tests/rosetta/out/CS/abbreviations-simple.error
run error: exit status 1
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(16,46): error CS1525: Invalid expression term '||' [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(16,62): error CS1002: ; expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(22,15): error CS8641: 'else' cannot start a statement. [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(22,15): error CS1003: Syntax error, '(' expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(22,15): error CS1525: Invalid expression term 'else' [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(22,15): error CS1026: ) expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(22,15): error CS1002: ; expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(37,13): error CS1002: ; expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(37,13): error CS1513: } expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(37,17): error CS1525: Invalid expression term '=' [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(40,10): error CS1513: } expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(41,17): error CS1525: Invalid expression term '=' [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(41,20): error CS1525: Invalid expression term 'out' [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(41,20): error CS1026: ) expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(41,20): error CS1002: ; expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(41,20): error CS1513: } expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(41,28): error CS1002: ; expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(41,28): error CS1513: } expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(44,16): error CS1525: Invalid expression term 'out' [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(44,16): error CS1002: ; expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(44,16): error CS1513: } expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(67,29): error CS1525: Invalid expression term '&&' [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(67,65): error CS1002: ; expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(115,34): error CS1525: Invalid expression term '&&' [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(115,67): error CS1002: ; expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(117,31): error CS1525: Invalid expression term '&&' [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(117,53): error CS1002: ; expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(141,84): error CS1525: Invalid expression term '&&' [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]
/tmp/TestMochiToCSabbreviations-simple1880194852/001/Program.cs(141,108): error CS1002: ; expected [/tmp/TestMochiToCSabbreviations-simple1880194852/001/app.csproj]

The build failed. Fix the build errors and run again.
